<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
     >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebg_with_greyline_topbottom"
        android:layout_marginBottom="15dp"
        >
        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                style="@style/text_title"
                android:text="@string/phonenum"
                />
            <EditText
                android:id="@+id/edit_phoneNum"
                style="@style/normal_EditText"
                android:hint="@string/phone_hint"
                android:inputType="number"
                />
        </TableRow>
        <View
            style="@style/normal_line1"
            />
        <TableRow
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                style="@style/text_title"
                android:text="@string/verifycode"
                />
            <EditText
                android:id="@+id/edit_verifycode"
                style="@style/normal_EditText"
                android:hint="@string/verifycode_hint"
                android:inputType="number"
                />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/normal_line"/>
            <TextView
                android:id="@+id/text_getverifycode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/getverifycode"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/def_font_medium"
                android:textColor="@drawable/text_themecolor_style"
                />
        </TableRow>
        <View
            style="@style/normal_line1"
            />
        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                style="@style/text_title"
                android:text="@string/pwd2"
                />
            <EditText
                android:id="@+id/edit_new_pwd"
                style="@style/normal_EditText"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                />
        </TableRow>
        <View
            style="@style/normal_line1"
            />
        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                style="@style/text_title"
                android:text="@string/sure_pwd"
                />
            <EditText
                android:id="@+id/edit_new_pwd_repeat"
                style="@style/normal_EditText"
                android:hint="@string/pwdrepeat_hint"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/btn_sure"
        style="@style/button_theme"
        android:layout_margin="15dp"
        android:text="@string/sure"
        />
</LinearLayout>
