<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
      <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="15dp"
		android:layout_marginBottom="5dp"
		android:textColor="@color/theme_grey"
	    android:textSize="@dimen/def_font_small15"
		android:text="@string/old_pwd"
	    android:layout_marginTop="30dp"
	    />
	<EditText
		android:id="@+id/edit_old_pwd"
		style="@style/normal_EditText"
		android:hint="@string/pwd_old_hint"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:layout_weight="0"
		android:drawableLeft="@mipmap/icon_password"
		/>
        

      <TextView 
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:paddingLeft="15dp"
		      android:paddingTop="10dp"
		      android:paddingRight="15dp"
		      android:textColor="@color/theme_grey"
		      android:textSize="@dimen/def_font_small15"
		      android:text="@string/new_pwd"
		      android:layout_marginTop="10dp"
		      android:layout_marginBottom="5dp"
		      />
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@drawable/whitebg_with_greyline_topbottom"
       >
		  <EditText
			  android:id="@+id/edit_new_pwd"
			  style="@style/normal_EditText"
			  android:hint="@string/pwd_new_hint"
			  android:inputType="textPassword"
			  android:layout_width="match_parent"
			  android:drawableLeft="@mipmap/icon_password"
			  />
       <View
           style="@style/normal_line1"
           />
		  <EditText
			  android:id="@+id/edit_new_pwd_repeat"
			  style="@style/normal_EditText"
			  android:hint="@string/pwdrepeat_hint"
			  android:inputType="textPassword"
			  android:imeOptions="actionDone"
			  android:layout_width="match_parent"
			  android:drawableLeft="@mipmap/icon_password"
			  />
   </LinearLayout>
   <TextView
     style="@style/text_grey_prompt" 
	 android:paddingLeft="15dp"
	 android:paddingRight="15dp"
     android:text="@string/pwd_prompt"
	/>

	<Button
		android:id="@+id/btn_sure"
		style="@style/button_theme"
		android:layout_margin="20dp"
		android:text="@string/sure_modify"
		/>

</LinearLayout>
