<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_blue"
        >
        <com.choucheng.dengdao2.definewidget.RoundImageView
            android:id="@+id/rv_heardview"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:src="@drawable/imgloading"
            />
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            >
            <TextView
                style="@style/normal_TextView"
                android:textColor="@color/tv_grey1"
                android:text="@string/app_phone_number"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_phoneNum"
                style="@style/normal_EditText"
                android:hint="@string/phone_hint"
                android:layout_width="match_parent"
                android:inputType="phone"
                />
        </TableRow>
        <View
            style="@style/normal_line2"
            />
        <TableRow>
            <TextView
                style="@style/normal_TextView"
                android:textColor="@color/tv_grey1"
                android:text="@string/verifycode"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/edit_verifycode"
                    style="@style/normal_EditText"
                    android:hint="@string/verifycode_hint"
                    android:inputType="number"
                    android:layout_weight="1"
                    />
                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/normal_line"/>
                <TextView
                    android:id="@+id/btn_getverifycode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/getverifycode"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/def_font_small15"
                    android:textColor="@drawable/text_themeblue_style"
                    android:paddingRight="10dp"
                    />
            </LinearLayout>
        </TableRow>

        <View
            style="@style/normal_line2"
            />
        <TableRow
            >
            <TextView
                style="@style/normal_TextView"
                android:textColor="@color/tv_grey1"
                android:text="@string/IDCard"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_IDCardNum"
                style="@style/normal_EditText"
                android:hint="请输入身份证号"
                android:layout_width="match_parent"
                android:inputType="phone"
                />
        </TableRow>

        <View
            style="@style/normal_line2"
            />
        <TableRow>
            <TextView
                style="@style/normal_TextView"
                android:textColor="@color/tv_grey1"
                android:text="@string/login_password"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_pwd"
                style="@style/normal_EditText"
                android:hint="@string/pwd2_hint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                />
        </TableRow>
        <View
            style="@style/normal_line2"
            />
        <TableRow>
            <TextView
                style="@style/normal_TextView"
                android:textColor="@color/tv_grey1"
                android:text="@string/login_password_confirm"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_pwd_repeat"
                style="@style/normal_EditText"
                android:hint="@string/pwdrepeat_hint"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />
        </TableRow>
        <View
         style="@style/normal_line2"
        />
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <CheckBox
            android:id="@+id/checkbox_agrrensug"
            style="@style/text_grey"
            android:layout_width="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/imagebutton_checkboxbutton2"
            android:drawablePadding="5dp"
            android:text="@string/i_have_read"
            android:textSize="13sp"
            android:checked="true"
            />
        <TextView
            android:id="@+id/tv_rules"
            style="@style/text_grey"
            android:text="@string/register_xieyi"
            android:textColor="@drawable/text_themeblue_style"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="3dp"
            android:textSize="13sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_register"
        style="@style/button_theme"
        android:layout_margin="10dp"
        android:text="@string/register"
        />


</LinearLayout>
