<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
     >

    <EditText
        android:id="@+id/edit_username"
        style="@style/normal_EditText"
        android:layout_width="match_parent"
        android:hint="@string/phone_hint"
        android:layout_weight="0"
        android:drawableLeft="@mipmap/icon_phone"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edit_pwd"
        style="@style/normal_EditText"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:drawableLeft="@mipmap/icon_password"
        android:layout_weight="0"
        android:layout_marginTop="20dp"
        android:layout_below="@id/edit_username"
        />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/edit_pwd"
        android:textColor="@drawable/text_themecolor_style"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget_password"
        android:layout_below="@id/edit_pwd"
        android:textColor="@drawable/text_grey_style"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/button_login"
        style="@style/button_theme"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_below="@id/tv_register"
        />

</RelativeLayout>
