<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <com.choucheng.dengdao2.definewidget.RoundImageView
            android:id="@+id/rv_heardview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/imgloading"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_sex_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/sexandage"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/tv_guanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/jiguan"
            android:lines="1"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/per_tel"
            android:lines="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_myorder"
            android:text="@string/my_order"
            android:textColor="@color/white"
            style="@style/normal_EditText_nobg"
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_myorder"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_account"
            style="@style/normal_EditText_nobg"
            android:text="@string/my_account"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_myaccount"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_mofidypwd"
            style="@style/normal_EditText_nobg"
            android:text="@string/modify_pwd"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_modifypwd"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_version"
            style="@style/normal_EditText_nobg"
            android:text="@string/my_version"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_version"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_kef"
            style="@style/normal_EditText_nobg"
            android:text="客服电话"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_kf"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <TextView
            android:id="@+id/tv_question"
            style="@style/normal_EditText_nobg"
            android:text="常见问题"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:drawableLeft="@mipmap/menu_question"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/percenter_bg_line"/>
        <Button
            android:id="@+id/btn_logout"
            style="@style/button_theme"
            android:text="@string/logout"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>


        
    

</ScrollView>
